<resources>
    <string name="app_name">GAAhead</string>

    //MAIN SCREEN
    <string name="info_splash">Please Select Type of User</string>
    <string name="btn_managerScreen">Manager</string>
    <string name="btn_playerScreen">Player</string>


    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_email">barcoe98@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //NAV DRAWER ITEMS
    <string name="menu_fixture_list">Fixtures</string>
    <string name="menu_add_result">Add Result</string>
    <string name="menu_result_list">Results</string>
    <string name="menu_add_player">Add Player</string>
    <string name="menu_player_all">All Players</string>
    <string name="menu_player_list">Players</string>
    <string name="menu_add_club">Add Club</string>
    <string name="menu_club_list">Clubs</string>
    <string name="menu_team_info">Team Information</string>
    <string name="menu_info">App Info</string>
    <string name="menu_about">About Us</string>
    <string name="menu_tables"> Tables</string>
    <string name="menu_my_info">My Information</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_training">Training</string>
    <string name="menu_access_control">Access Control</string>


    //TOOLBAR FRAGMENT TITLES
    <string name="action_fixture_add">Add Fixture</string>
    <string name="action_fixture_edit">Edit Fixture</string>
    <string name="action_fixture_details">Fixture Details</string>
    <string name="action_fixture_list">Fixtures</string>
    <string name="action_fixture_all">All Fixtures</string>

    <string name="action_player_edit">Edit Player</string>
    <string name="action_player_details">Player Details</string>
    <string name="action_player_add">Add Player</string>
    <string name="action_player_list">Players</string>

    <string name="action_result_add">Add Result</string>
    <string name="action_result_edit">Edit Result</string>
    <string name="action_result_list">Results</string>
    <string name="action_result_all">All Results</string>

    <string name="action_club_details">Club Details</string>
    <string name="action_club_list">Clubs</string>
    <string name="action_club_add">Add Club</string>


    //Nav Drawer Titles
    <string name="result_title">Results</string>
    <string name="fixture_title">Fixtures</string>
    <string name="team_title"> Team</string>
    <string name="player_title">Players</string>
    <string name="fixture_result_subtitle">Fixtures &amp; Results</string>
    <string name="management_subtitle">Team Management</string>
    <string name="select_profile_image">Select Profile Picture</string>
    <string name="result_subtitle">Results</string>
    <string name="fixture_subtitle">Fixtures</string>
    <string name="nav_header_name">Michael Barcoe</string>
    <string name="player_subtitle">Players</string>
    <string name="info_title">Information</string>
    <string name="menu_team">Team</string>


    //buttons
    <string name="btn_addFixture">Add Fixture</string>
    <string name="btn_addResult">Add Result</string>
    <string name="btn_addTeamALogo">Team A Logo</string>
    <string name="btn_addTeamBLogo">Team B Logo</string>
    <string name="btn_addToResults">Add to Results</string>
    <string name="btn_addPlayer">Add Player</string>
    <string name="btn_editFixture">Edit Fixture</string>
    <string name="btn_deleteFixture">Delete Fixture</string>
    <string name="btn_editResult">Edit Result</string>
    <string name="btn_editToResults">Edit Results</string>
    <string name="btn_addPlayerImage">Add Player Image</string>
    <string name="btn_player">Add Player</string>
    <string name="btn_editPlayer">Edit Player</string>
    <string name="btn_addLogoBtn">Add Logo</string>
    <string name="btn_editPlayerImage">Edit Player Image</string>


    //Hints
    <string name="hint_teamA">Team A\'s Name</string>
    <string name="hint_teamALogo">Team A\'s Logo</string>
    <string name="hint_teamB">Team B\'s Name</string>
    <string name="hint_teamBLogo">Team B\'s Logo</string>
    <string name="hint_time">Enter A Time</string>
    <string name="hint_date">Enter A Date</string>
    <string name="hint_location">Enter A Location</string>
    <string name="hint_Division">Enter A Division</string>
    <string name="hint_type">Enter A Type Of Sport</string>
    <string name="hint_teamAScore">Team A\'s Score</string>
    <string name="hint_teamBScore">Team B\'s Score</string>
    <string name="select_teamA_image">Select Team A image</string>
    <string name="select_teamB_image">Select Team B image</string>
    <string name="hint_type_of_user">Type of User</string>
    <string name="hint_competition">Enter Competition Name</string>
    <string name="hint_playerName">Player Name</string>
    <string name="hint_playerAge">Player Age</string>
    <string name="hint_playerHeight">Player Height(cm)</string>
    <string name="hint_playerWeight">Player Weight(kg)</string>
    <string name="hint_playerPosition">Player Position</string>
    <string name="hint_teamName">Enter Team Name</string>
    <string name="hint_county">Enter County</string>
    <string name="hint_colours">Enter Team Colours</string>
    <string name="hint_year_founded">Enter Year Founded</string>
    <string name="hint_division">Enter Teams Division</string>
    <string name="hint_grounds">Enter Club Grounds</string>


    //Error Hints
    <string name="error_teamAName">Please Enter Team A Name</string>
    <string name="error_teamBName">Please Enter Team B Name</string>
    <string name="error_teamAScore">Please Enter Team A Score</string>
    <string name="error_teamBScore">Please Enter Team B Score</string>
    <string name="error_location">Please Enter A Location</string>
    <string name="error_time">Please Enter A Time</string>
    <string name="error_date">Please Enter A Date</string>
    <string name="error_type">Please Enter A Type</string>
    <string name="error_competition">Please Enter a Competition</string>
    <string name="error_clubName">Please Enter A Club Name</string>
    <string name="error_county">Please Enter a Club County</string>
    <string name="error_colours">Please Enter Club Colours</string>
    <string name="error_grounds">Please Enter Club Grounds</string>
    <string name="error_division">Please Enter a division</string>
    <string name="error_yearFounded">Please Enter Year Founded</string>
    <string name="error_playerName">Enter a Player Name</string>
    <string name="error_playerWeight">Enter a Player Weight </string>
    <string name="error_playerHeight">Enter a Player Height </string>
    <string name="error_playerPosition">Enter a Player Position </string>
    <string name="error_playerAge">Enter a Age Name </string>



    //Login page
    <string name="messageLoading">Please wait while we Connect to the Server...</string>
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="menu_fixture">Add Fixture</string>
    <string name="rate_app">Rate App</string>
    <string name="skip_sign_in">Supporter??? Skip Sign In</string>
    <string name="skip_sign_in_text">Supporter ??</string>

    <string name="sign_in_google">Sign In with Google</string>
    <string name="sign_in_email">Sign In with Email</string>
    <string name="sign_in_phone">Sign In with Phone</string>

    <string name="favourites_title">Favourites</string>
    <string name="menu_favourites">Favourites</string>
    <string name="club_favourites_title">Favourite Clubs</string>
    <string name="menu_club_fav">Favourite Clubs</string>
    <string name="btn_addClub">Add Club</string>
    <string name="fixture_favourites_title">Favourite Fixtures</string>
    <string name="btn_addManagerInfo">Add My Info</string>
    <string name="hint_trophiesWon">Trophies Won</string>
    <string name="hint_background">Add Your Background</string>
    <string name="hint_placeOfBirth">Add Place of Birth</string>
    <string name="hint_age">Age</string>
    <string name="hint_name">Full Name</string>
    <string name="btn_addProfilePic">Add Profile Pic</string>
    <string name="my_info_title">My Info</string>
    <string name="user_info_title">Add User Information</string>
    <string name="text_club_fav_pin">Pin As Favourite</string>
    <string name="menu_fixture_favourites">Fixture Favourites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_info_title">App Information</string>
    <string name="action_pin_add">Add Pin</string>
    <string name="error_pin_title">Please Enter a Pin Title</string>
    <string name="error_pin_comment">Please Enter A Pin Comment</string>
    <string name="hint_pinComment">Enter a Pin Comment</string>
    <string name="hint_pinTitle">Enter Pin Title</string>
    <string name="menu_pins_all">Pins</string>
    <string name="action_pins_map">Pins</string>
    <string name="pins_title">Pins</string>
    <string name="btn_pin">Add Pin</string>
    <string name="pitch_pins_subtitle">Pitch Pins</string>
    <string name="error_history">Enter History</string>
    <string name="error_trophies">Enter Number Of Trophies</string>
    <string name="hint_history">Enter History</string>
    <string name="hint_trophies">Enter Number of Trophies</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="app_info_text">This App is a college assignment.It was App was developed using Android studio in Kotlin. It utilises FirebaseUi, Authentication, Database and Storage.</string>
    <string name="pins_map_title">Pins Map</string>
    <string name="menu_pins_all_map">Pins Map</string>
    <string name="menu_pins_add">Add Pin</string>


</resources>
