<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

    <item android:title="@string/fixture_subtitle">
        <menu>
            <item
                android:id="@+id/nav_add_fixture"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_fixture" />

            <item
                android:id="@+id/nav_fixture_all"
                android:icon="@drawable/ic_menu_list_all"
                android:title="@string/action_fixture_all" />
        </menu>
    </item>

        <item android:title="@string/action_club_list">
            <menu>
                <item
                    android:id="@+id/nav_add_club"
                    android:icon="@drawable/ic_menu_add"
                    android:title="@string/menu_add_club" />
                <item
                    android:id="@+id/nav_club_all"
                    android:icon="@drawable/ic_menu_list_all"
                    android:title="@string/menu_club_list" />
            </menu>
        </item>


        <item android:title="@string/result_subtitle">
        <menu>
            <item
                android:id="@+id/nav_add_result"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_add_result" />
            <item
                android:id="@+id/nav_results_all"
                android:icon="@drawable/ic_menu_list_all"
                android:title="@string/action_result_all" />

        </menu>
    </item>

        <item android:title="@string/player_subtitle">
            <menu>
                <item
                    android:id="@+id/nav_add_player"
                    android:icon="@drawable/ic_menu_add"
                    android:title="@string/menu_add_player" />
                <item
                    android:id="@+id/nav_player_all"
                    android:icon="@drawable/ic_menu_list_all"
                    android:title="@string/menu_player_all" />

            </menu>
        </item>

    <item android:title="@string/menu_access_control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_overview"
                android:title="@string/menu_info" />
        </menu>
    </item>

    </group>
</menu>