<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_info"
            android:icon="@drawable/ic_menu_my_info"
            android:title="@string/menu_my_info" />
        <item
            android:id="@+id/nav_timer"
            android:icon="@drawable/ic_menu_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_menu_training"
            android:title="@string/menu_training" />

    </group>


    <item android:title="@string/fixture_result_subtitle">
        <menu>
            <item
                android:id="@+id/nav_clubs_all"
                android:icon="@drawable/ic_menu_list_all"
                android:title="@string/menu_club_list" />
            <item
                android:id="@+id/nav_fixture_list"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/menu_fixture_list" />
            <item
                android:id="@+id/nav_fixtures_all"
                android:icon="@drawable/ic_menu_list_all"
                android:title="@string/action_fixture_all" />
            <item
                android:id="@+id/nav_result_list"
                android:icon="@drawable/ic_menu_list"
                android:title="@string/menu_result_list" />
            <item
                android:id="@+id/nav_results_all"
                android:icon="@drawable/ic_menu_list_all"
                android:title="@string/action_result_all"/>
        </menu>
    </item>

    <item android:title="@string/pitch_pins_subtitle">
        <menu>
            <item
                android:id="@+id/nav_pin_add"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/action_pin_add"/>
            <item
                android:id="@+id/nav_pins_all"
                android:icon="@drawable/ic_menu_pin"
                android:title="@string/menu_pins_all" />

        </menu>
    </item>

    <item android:title="@string/menu_access_control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
            <item
                android:id="@+id/nav_app_info"
                android:icon="@drawable/ic_menu_overview"
                android:title="@string/menu_info" />
        </menu>
    </item>
</menu>
