<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/menu_info" />


    </group>
    <item android:title="@string/management_subtitle">
    <menu>
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/menu_team" />
        <item
            android:id="@+id/nav_players"
            android:icon="@drawable/ic_menu_player"
            android:title="@string/menu_players" />


    </menu>
</item>
    <item android:title="@string/fixture_result_subtitle">
        <menu>
            <item
                android:id="@+id/nav_fixture"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_fixture" />
            <item
                android:id="@+id/nav_fixture_list"
                android:icon="@drawable/ic_menu_result"
                android:title="@string/menu_fixture_list" />
            <item
                android:id="@+id/nav_fixture_all"
                android:icon="@drawable/ic_menu_fixtures_all"
                android:title="@string/menu_report_all" />
            <item
                android:id="@+id/nav_result"
                android:icon="@drawable/ic_menu_add"
                android:title="@string/menu_result" />
            <item
                android:id="@+id/nav_result_list"
                android:icon="@drawable/ic_menu_result"
                android:title="@string/menu_result_list" />

        </menu>
    </item>

    <item android:title="Access Control">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/sign_out" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/rate_app" />

        </menu>
    </item>


</menu>
