<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_fixtures_all"
            android:icon="@drawable/ic_menu_list_all"
            android:title="@string/action_fixture_all" />

        <item
            android:id="@+id/nav_results_all"
            android:icon="@drawable/ic_menu_list_all"
            android:title="@string/action_result_all" />

        <item
            android:id="@+id/nav_clubs_all"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/menu_club_list" />

        <item
            android:id="@+id/nav_players_all"
            android:icon="@drawable/ic_menu_player"
            android:title="@string/menu_player_list" />

        <item
            android:id="@+id/nav_pins_all"
            android:icon="@drawable/ic_menu_player"
            android:title="@string/menu_pins_all" />

        <item
            android:id="@+id/nav_pin_add"
            android:icon="@drawable/ic_menu_player"
            android:title="@string/menu_pins_all" />


        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/menu_sign_out" />

    </group>
</menu>
