<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_overview"
            android:title="@string/menu_info" />

    </group>

    <item android:title="@string/fixture_result_subtitle">
        <menu>
            <item
                android:id="@+id/nav_fixture_list"
                android:icon="@drawable/ic_menu_result"
                android:title="@string/menu_fixture_list" />
            <item
                android:id="@+id/nav_result_list"
                android:icon="@drawable/ic_menu_result"
                android:title="@string/menu_result_list" />

        </menu>
    </item>
</menu>
