<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@drawable/rectangle1"
    tools:context="fragments.FixtureFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="317dp"
            app:srcCompat="@drawable/gaaheadlogo2" />

        <TextView
            android:id="@+id/Info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".05"
            android:padding="40dp"
            android:text="@string/info_splash"
            android:textAlignment="center"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:text="@string/btn_playerScreen" />

            <Button
                android:id="@+id/managerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/btn_margin"
                android:layout_weight="1"
                android:text="@string/btn_managerScreen" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>